# Telegami

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml  settings.gradle.kts  version.properties  versions.json
.github/: FUNDING.yml
.github/workflows/: check-versions.yml  release-apk.yml  sync-xposed-repo.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/obfuscation_mappings/: cherrygram.json  nagram.json  nekogram.json  octogram.json
app/src/main/assets/translations/: ar.json  cn.json  en.json
app/src/main/java/com/aoya/telegami/: Telegami.kt  TelegamiApp.kt  XposedLoader.kt
app/src/main/java/com/aoya/telegami/core/: Config.kt  Constants.kt
app/src/main/java/com/aoya/telegami/data/: AppDatabase.kt  DeletedMessage.kt  DeletedMessageDao.kt
app/src/main/res/drawable/: ic_telegami.xml  outline_extension_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_config.xml  fragment_features.xml  fragment_home.xml  hook_view.xml  view_status_card.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/navigation/: home_nav_graph.xml
app/src/main/res/values/: array.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml  themes_overlay.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-night/: themes.xml  themes_overlay.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: features.xml  settings.xml
docs/: obfuscation.md
gradle/: libs.versions.toml
scripts/: check_versions.py
(+139 files in other folders)
